--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
-go_import_path: github.com/IBAX/go-ibax
 
-install: true
+env: GO111MODULE=on
 
-script: go build github.com/IBAX/go-ibax
+go:
+  - 1.12.x
