--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,14 @@ services:
 #      - postgresql-data:/var/lib/postgresql/data
   redis:
     hostname: redis
+    restart: always
+    image: redis:5
+    container_name: redis
+    ports:
+      - "6379:6379"
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+  centrifugo:
+    container_name: centrifugo
     image: centrifugo/centrifugo:v3
     volumes:
       - "./data/centrifugo:/centrifugo"
@@ -49,6 +57,3 @@ services:
       nofile:
         soft: 65536
         hard: 65536
-#volumes:
-#  postgresql-data:
-#    name: postgresql-data
