--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,4 @@
 version: "3.9"
-services:
-  ibax:
-    env_file:
-      - .env
-    hostname: ibax
-    restart: always
-    image: ibax/go-ibax:latest
-    container_name: ibax
-    volumes:
-      - ./data/ibax:/mnt/ibax/data
-      - ./data/cert:/mnt/cert
-    depends_on:
-      - postgresql
-      - redis
-      - centrifugo
-    links:
-      - postgresql:postgresql
       - redis:redis
       - centrifugo:centrifugo
     ports:
@@ -57,3 +40,6 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+#volumes:
+#  postgresql-data:
+#    name: postgresql-data
