--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,4 @@ language: go
 
 env: GO111MODULE=on
 
-go:
-  - 1.12.x
-  - master
-
-go_import_path: github.com/IBAX/go-ibax
-
+script: go build github.com/IBAX/go-ibax
