improved userdbsize function，add TxFullData to SmartContarct

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
-language: go
 
-env: GO111MODULE=on
+go_import_path: github.com/IBAX/go-ibax
 
-go:
-  - 1.12.x
-  - master
+install: true
+
+script: go build github.com/IBAX/go-ibax
