--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,26 @@ services:
       - .env
     hostname: ibax
     restart: always
-    image: postgres:13
-    container_name: postgresql
+    image: ibax/go-ibax:latest
+    container_name: ibax
+    volumes:
+      - ./data/ibax:/mnt/ibax/data
+      - ./data/cert:/mnt/cert
+    depends_on:
+      - postgresql
+      - redis
+      - centrifugo
+    links:
+      - postgresql:postgresql
+      - redis:redis
+      - centrifugo:centrifugo
     ports:
-      - "5433:5432"
-    environment:
-      TZ: UTC
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
-#    volumes:
-#      - postgresql-data:/var/lib/postgresql/data
+      - "7078:7078"
+      - "7079:7079"
+  postgresql:
+    hostname: postgresql
+    restart: always
+    image: postgres:13
   redis:
     hostname: redis
     restart: always
